Wed Jun 29 00:03:20 2005  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* regparse.c (fetch_token): avoid warning of unused goto tag.
	  [ruby-dev:26389]

Tue Jun 28 21:59:29 2005  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* dir.c, eval.c, parse.y, process.c, ruby.c: avoid warning "unused
	  variable" [ruby-dev:26387]

	* dir.c (glob_helper): avoid warning "enumeration value `RECURSIVE'
	  not handled in switch" [ruby-dev:26392]

Tue Jun 28 01:52:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/lib/kconv.rb: add Kconv::VERSION
	* ext/nkf/lib/kconv.rb (conv): can process arrayed options
	* ext/nkf/nkf-utf8/nkf.c: imported Revision 1.69
	* ext/nkf/nkf-utf8/utf8tbl.c: imported Revision 1.9

Sat Jun 25 17:12:20 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils.parse_query): should
	  discard if key=val pair is empty. patch from Gary Wright.

Sat Jun 25 15:49:18 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_min, enum_max, enum_min_by, enum_max_by): do not ignore
	  nil as the first element.

Sat Jun 25 15:13:54 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/set.rb (Set#==): [ruby-dev:25206] (ported from ruby_1_8 branch)

Sat Jun 25 11:37:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/lib/kconv.rb: remove constants
	  Iconv_Shift_JIS, Uconv_EUC_JP, Iconv_UTF8
	* ext/nkf/lib/kconv.rb: add module functions to Kconv
	  conv, {eucjp, shiftjis, utf8}?, guess_as_symbol
	* ext/nkf/lib/kconv.rb: add instance methods to String
	  conv, {eucjp, shiftjis, utf8}?
	* ext/nkf/lib/kconv.rb: add aliases Kconv.to_* and String#to_*

Fri Jun 24 13:17:45 2005  akira yamada  <akira@ruby-lang.org>

	* lib/uri/common.rb, lib/uri/generic.rb: fixed typo in documents and
	  replaced some existent domain name with "example.com".

Fri Jun 24 12:23:19 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix typo on Tk.grid_propagate.

	* ext/tk/lib/tk.rb: Tk.event_generate and TkWindow#event_generate